tests/baselines/reference/VariableDeclaration1_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration1_es6.ts(1,6): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration1_es6.ts (1 errors) ====
    const
         
!!! error TS1123: Variable declaration list cannot be empty.